--- a/package.json
+++ b/package.json
@@ -54,12 +54,15 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "razorpay": "^2.9.4",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/shortid": "^0.0.32",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
